--- a/modules/Game/game.scss
+++ b/modules/Game/game.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   margin-right: 0.5rem;
   font-size: 2rem;
-  font-family: "Permanent Marker", cursive;
+  font-family: 'Permanent Marker', cursive;
 }
 
 #logo {
@@ -11,11 +11,6 @@
 
 #title-div {
   margin-top: 1rem;
-}
-
-#warn {
-  color: red;
-  font-style: italic;
 }
 
 .grid-item {
