Got the login display working

--- a/modules/Lobby/lobby.module.scss
+++ b/modules/Lobby/lobby.module.scss
@@ -1,15 +1,15 @@
-#title {
+.title {
   display: inline-block;
   margin-right: 0.5rem;
   font-size: 2rem;
   font-family: 'Permanent Marker', cursive;
 }
 
-#logo {
+.logo {
   height: 3rem;
 }
 
-#title-div {
+.title-div {
   margin-top: 1rem;
 }
 
