fixing the styles to be more like the game, favicon

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,7 +1,4 @@
-$blue: rgb(51, 115, 152);
-$black: #17181a;
-$green: rgb(129, 186, 122);
-$yellow: rgb(227, 226, 108);
+@import 'variables';
 
 $colors: (
   'blue': $blue,
