--- a/modules/Lobby/lobby.module.scss
+++ b/modules/Lobby/lobby.module.scss
@@ -1,3 +1,61 @@
+@import '../../styles/variables.scss';
+
+$header-height: 55px;
+
+.header-fill {
+  height: $header-height;
+}
+
+.header {
+  height: $header-height;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.header-col {
+  display: inline-flex;
+  vertical-align: middle;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+.header-connection {
+  background-color: $yellow;
+  border-bottom-right-radius: 20px;
+  color: #000;
+  white-space: nowrap;
+  user-select: none;
+  padding: 16px;
+  font-size: 14px;
+
+  * {
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
+
+.connection-label {
+  margin-right: 8px;
+}
+
+.circle {
+  border: 1px solid #000;
+  border-radius: 50%;
+  width: 8px;
+  height: 8px;
+}
+
+.header-separator {
+  width: 1px;
+  background: #000;
+  margin: 0 8px;
+  height: 12px;
+}
+
 .title {
   display: inline-block;
   margin-right: 0.5rem;
