--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -8,6 +8,8 @@ $colors: (
 
 $theme-colors: (
   'primary': $blue,
+  'secondary': $yellow,
+  'info': $green,
 );
 
 /* import bootstrap to set changes */
