--- a/styles/global.scss
+++ b/styles/global.scss
@@ -40,6 +40,10 @@ h2 {
   font-family: 'Permanent Marker', cursive;
 }
 
+.marker {
+  font-family: 'Permanent Marker', cursive;
+}
+
 .footer-height {
   @media (min-width: $tablet) {
     height: 150px;
