grid of words design

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,6 +2,8 @@ $blue: rgb(50, 115, 153);
 $black: #17181a;
 $green: rgb(126, 185, 120);
 $yellow: rgb(227, 226, 108);
+$aqua: #7ff7dd;
+$purple: #7f10ad;
 
 // Media breakpoints
 $large-desktop: 1500px;
