--- a/modules/Header/header.module.scss
+++ b/modules/Header/header.module.scss
@@ -1,32 +1,19 @@
 @import '../../styles/variables.scss';
 
-$header-height: 55px;
-$header-height-mobile: 45px;
-
-.header-fill {
-  height: calc(#{$header-height-mobile} + 10px);
-  @media (min-width: $tablet) {
-    height: $header-height;
-  }
-}
+$header-height: 45px;
 
 .header {
-  height: $header-height-mobile;
+  height: $header-height;
   width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
   z-index: 1;
-  @media (min-width: $tablet) {
-    height: $header-height;
-  }
+  margin-bottom: 1rem;
 }
 
 .header-col {
   display: inline-flex;
   vertical-align: middle;
   align-items: center;
-  width: 50%;
+  width: 100%;
   height: 100%;
 }
 
@@ -34,14 +21,9 @@ $header-height-mobile: 45px;
   background-color: $yellow;
   border-bottom-right-radius: 20px;
   color: #000;
-  white-space: nowrap;
   user-select: none;
-  padding: 12px;
+  padding: 12px 16px 16px;
   font-size: 14px;
-
-  @media (min-width: $tablet) {
-    padding: 16px;
-  }
 
   * {
     display: inline-block;
