--- a/styles/global.scss
+++ b/styles/global.scss
@@ -48,6 +48,10 @@ h2 {
   font-family: 'Permanent Marker', cursive;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .footer-height {
   @media (min-width: $tablet) {
     height: 150px;
