toaster types, resetScores,

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,6 +4,7 @@ $green: rgb(126, 185, 120);
 $yellow: rgb(227, 226, 108);
 $aqua: #7ff7dd;
 $purple: #7f10ad;
+$red: #e36c6e;
 
 // Media breakpoints
 $large-desktop: 1500px;
