--- a/modules/Game/game.module.scss
+++ b/modules/Game/game.module.scss
@@ -188,6 +188,18 @@
   }
 }
 
+.clueReady {
+  input {
+    margin-left: -1.5rem;
+    height: 20px;
+    width: 20px;
+  }
+  label {
+    font-size: 16px;
+    vertical-align: sub;
+  }
+}
+
 .host-options {
   background: $yellow;
   border-radius: 5px;
