--- a/styles/global.scss
+++ b/styles/global.scss
@@ -9,6 +9,10 @@ html {
   width: 100%;
 }
 
+html {
+  background: $yellow;
+}
+
 body {
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
