adding a chat room feature

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,6 +6,19 @@ $aqua: #7ff7dd;
 $purple: #7f10ad;
 $red: #e36c6e;
 
+$gray-1: #f9fafb;
+$gray-2: #f5f6f7;
+$gray-3: #e1e1e1;
+$gray-4: #dadcdf;
+$gray-5: #ced1d5;
+$gray-6: #afb3ba;
+$gray-7: #8a8f9c;
+$gray-8: #626669;
+$gray-9: #545658;
+$gray-10: #2f3337;
+$gray-11: #22252a;
+$gray-12: $black;
+
 // Media breakpoints
 $large-desktop: 1500px;
 $small-desktop: 1199px;
